# ml_predictive_maintenance

./: .dockerignore  .gitignore  README.md  check_columns..py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.start/unix/: start.bash  stop.bash
.start/windows/: start.bat  stop.bat
app/backend/: Dockerfile  main.py
app/backend/application/: model_loader.py
app/backend/application/api/: router.py
app/backend/application/api/endpoint/: predict_failure.py
app/backend/application/schemas/: input_data_model.py
data/notebooks/: av2_milestone_5_ncia_grupo_B_vespertino_finalizado.ipynb  bases.ipynb
